# insitu_sim_python

./: .gitignore  CMakeLists.txt  Makefile  README.md  c0.mat  debug.py  directions.mat  freq.mat  pk.mat  pm.mat  receivers.mat  setup.py  simulation.toml
data/: bemflush_Lx_1.0m_Ly_1.0m_3darray.pkl  gauss_data.pkl  my_bemflush_Lx_1.0m_Ly_1.0m.pkl  my_qterm.pkl  pu_sim1.pkl  test_tik.mat
example/: array_prepro.py  bayes_expdecay.py  bayes_linereg.py  bayes_logz_analytical.py  bayes_sinesig.py  create_rec_array.py  dcism_ba.pkl  dcism_reg_bayesian.py  dcism_seq_bayes.py  field_melamine_jcal_r110_array0.pkl  ism_reg_bayesian.py  mydDCISM.py  plane_test.py  plane_wave_exp_ig.py  random_walk.py  sf_dipole_infinite_nlr_sample.py  sf_infinite_nlr_sample.py  test_class.py  todecompdata_1sph.npz
insitu/: absorption_database.py  array_comparison.py  baysian_sampling.py  bemflush_fp.py  controlsair.py  cvxpy_tutorials.py  decomp2mono.py  decomp2mono_bayesian.py  decomp2waves.py  decomp_DCISM_bayesian.py  decomp_quad.py  decomp_quad_EU.py  decomp_quad_v2.py  decomposition_ev.py  decomposition_ev_ig.py  decompositionclass.py  directDCISM.py  elipsesampling.py  ff_array3d.py  ff_array_error.py  ff_randominc.py  field_bembem_mat.py  field_bemflush.py  field_bemflush0.py  field_bemflush2.py  field_calc.py  field_diffuse_pw.py  field_free.py  field_inf_nlr.py  field_pistonbaffle.py  field_pw.py  field_qterm.py  gen_gauss_mtx.py  insitu_simu.py  ipython.html  lcurve_functions.py  locreac_2parray.py  locreac_3darray.py  locreac_3darrays.py  locreac_bemflush.py  (+18 more)
(+94 files in other folders)
